add_library(slim_parser STATIC slim_driver.c parser.c token.c bind.c normalize.c infer.c)
target_link_libraries(slim_parser PUBLIC common api)
target_link_libraries(slim_parser PRIVATE shady)
target_include_directories(slim_parser PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>)
target_link_libraries(shady PRIVATE "$<BUILD_INTERFACE:slim_parser>")
